--- a/spark/challenges/challenge_3.ipynb
+++ b/spark/challenges/challenge_3.ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,12 +79,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!mkdir -p /content/lake/silver/municipalities"
+        "!rm -rf lake/\n"
       ],
       "metadata": {
         "id": "nbKCwmAMv0st"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "xCb-St20vxOx"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,25 +106,37 @@
       "metadata": {
         "id": "ZAuyPWFrvrFm"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "from pyspark.sql import DataFrame, SparkSession\n",
-        "from pyspark.sql.functions import col, expr\n",
-        "from pyspark.sql.types import StructType, StructField, StringType, ArrayType\n",
+        "from pyspark.sql.functions import *\n",
+        "import pyspark.sql.functions as F\n",
+        "from pyspark.sql.types import *\n",
+        "import requests\n",
+        "import os\n",
         "\n",
         "class ETLFlow:\n",
         "\n",
         "    def __init__(self, spark: SparkSession) -> None:\n",
         "        self.spark = spark\n",
         "\n",
-        "    def extract(self, format: str, path: str, schema: StructType = None) -> DataFrame:\n",
+        "    def extract_from_file(self, format: str, path: str, **kwargs) -> DataFrame:\n",
+        "        df = self.spark.read.format(format).load(path)\n",
+        "        return df\n",
+        "\n",
+        "    def extract_from_api(self, url: str, schema: StructType = None):\n",
+        "        response = requests.get(url)\n",
+        "        rdd = self.spark.sparkContext.parallelize(response.json())\n",
+        "\n",
         "        if schema:\n",
-        "            return self.spark.read.format(format).schema(schema).load(path)\n",
-        "        return self.spark.read.format(format).load(path)\n",
+        "            df = self.spark.read.schema(schema).json(rdd)\n",
+        "        else:\n",
+        "            df = self.spark.read.json(rdd)\n",
+        "        return df\n",
         "\n",
         "    def load(self, df: DataFrame, format: str, path: str, partition_column: str = None, **kwargs) -> None:\n",
         "        if partition_column:\n",
@@ -132,94 +144,161 @@
         "        else:\n",
         "            df.coalesce(1).write.mode(\"overwrite\").format(format).save(path)\n",
         "\n",
-        "class EnrichETLTask(ETLFlow):\n",
+        "class ETLTask(ETLFlow):\n",
         "\n",
         "    def __init__(self, spark: SparkSession) -> None:\n",
-        "        super().__init__(spark)\n",
+        "        self.spark = spark\n",
         "\n",
-        "    def enrich_vehicles(self):\n",
-        "        # Define schemas\n",
-        "        vehicles_schema = StructType([\n",
-        "            StructField('bearing', StringType(), True),\n",
-        "            StructField('block_id', StringType(), True),\n",
-        "            StructField('current_status', StringType(), True),\n",
-        "            StructField('id', StringType(), True),\n",
-        "            StructField('lat', StringType(), True),\n",
-        "            StructField('line_id', StringType(), True),\n",
-        "            StructField('lon', StringType(), True),\n",
-        "            StructField('pattern_id', StringType(), True),\n",
-        "            StructField('route_id', StringType(), True),\n",
-        "            StructField('schedule_relationship', StringType(), True),\n",
-        "            StructField('shift_id', StringType(), True),\n",
-        "            StructField('speed', StringType(), True),\n",
-        "            StructField('stop_id', StringType(), True),\n",
-        "            StructField('timestamp', StringType(), True),\n",
-        "            StructField('trip_id', StringType(), True),\n",
-        "            StructField('date', StringType(), True)\n",
-        "        ])\n",
+        "    def ingestion_lines(self):\n",
+        "        lines_schema = StructType([StructField('color', StringType(), True),\n",
+        "                                   StructField('facilities', ArrayType(StringType(), True), True),\n",
+        "                                   StructField('id', StringType(), True),\n",
+        "                                   StructField('localities', ArrayType(StringType(), True), True),\n",
+        "                                   StructField('long_name', StringType(), True),\n",
+        "                                   StructField('municipalities', ArrayType(StringType(), True), True),\n",
+        "                                   StructField('patterns', ArrayType(StringType(), True), True),\n",
+        "                                   StructField('routes', ArrayType(StringType(), True), True),\n",
+        "                                   StructField('short_name', StringType(), True), StructField('text_color', StringType(), True)])\n",
         "\n",
-        "        lines_schema = StructType([\n",
-        "            StructField('id', StringType(), True),\n",
-        "            StructField('long_name', StringType(), True),\n",
-        "        ])\n",
+        "        df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/lines\", schema=lines_schema)\n",
+        "        self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/lines\")\n",
         "\n",
-        "        municipalities_schema = StructType([\n",
-        "            StructField('id', StringType(), True),\n",
-        "            StructField('name', ArrayType(StringType()), True),\n",
-        "        ])\n",
+        "    def ingestion_vehicles(self):\n",
+        "        vehicle_schema = StructType([StructField('bearing', IntegerType(), True),\n",
+        "                                    StructField('block_id', StringType(), True),\n",
+        "                                    StructField('current_status', StringType(), True),\n",
+        "                                    StructField('id', StringType(), True),\n",
+        "                                    StructField('lat', FloatType(), True),\n",
+        "                                    StructField('line_id', StringType(), True),\n",
+        "                                    StructField('lon', FloatType(), True),\n",
+        "                                    StructField('pattern_id', StringType(), True),\n",
+        "                                    StructField('route_id', StringType(), True),\n",
+        "                                    StructField('schedule_relationship', StringType(), True),\n",
+        "                                    StructField('shift_id', StringType(), True),\n",
+        "                                    StructField('speed', FloatType(), True),\n",
+        "                                    StructField('stop_id', StringType(), True),\n",
+        "                                    StructField('timestamp', TimestampType(), True),\n",
+        "                                    StructField('trip_id', StringType(), True)])\n",
         "\n",
-        "        # Read datasets from SILVER layer\n",
-        "        vehicles_df = self.extract(format=\"parquet\", path=\"/content/lake/silver/vehicles\", schema=vehicles_schema)\n",
-        "        lines_df = self.extract(format=\"parquet\", path=\"/content/lake/silver/lines\", schema=lines_schema)\n",
-        "        municipalities_df = self.extract(format=\"parquet\", path=\"/content/lake/silver/municipalities\", schema=municipalities_schema)\n",
+        "        df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/vehicles\", schema=vehicle_schema)\n",
+        "        df = df.withColumn(\"date\", expr(\"date(timestamp)\"))\n",
+        "        self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\", partition_column=\"date\")\n",
         "\n",
-        "        # Perform joins to enrich the vehicles dataset\n",
-        "        enriched_df = (\n",
-        "            vehicles_df\n",
-        "            .join(lines_df, vehicles_df.line_id == lines_df.id, \"left\")\n",
-        "            .join(municipalities_df, vehicles_df.line_id == municipalities_df.id, \"left\")\n",
-        "            .select(\n",
-        "                vehicles_df[\"*\"],\n",
-        "                lines_df[\"long_name\"].alias(\"line_name\"),\n",
-        "                municipalities_df[\"name\"].alias(\"municipality_name\")\n",
-        "            )\n",
-        "        )\n",
+        "    def ingestion_municipalities(self):\n",
+        "        municipalities_schema = StructType([StructField('name', StringType(), True),\n",
+        "                                           StructField('district_name', StringType(), True),\n",
+        "                                           StructField('id', StringType(), True)])\n",
         "\n",
-        "        # Write the enriched dataset to the GOLD layer\n",
-        "        self.load(\n",
-        "            df=enriched_df,\n",
-        "            format=\"parquet\",\n",
-        "            path=\"/content/lake/gold/vehicles_enriched\",\n",
-        "            partition_column=\"date\"\n",
-        "        )\n",
+        "        df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/municipalities\", schema=municipalities_schema)\n",
+        "        self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/municipalities\")\n",
         "\n",
-        "if __name__ == \"__main__\":\n",
-        "    spark = SparkSession.builder.master(\"local\").appName(\"Enrich ETL Program\").getOrCreate()\n",
+        "    def cleansing_vehicles(self):\n",
+        "        df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
         "\n",
-        "    print(\"Starting ENRICH ETL process\")\n",
-        "    etl = EnrichETLTask(spark)\n",
+        "        # Transformations\n",
+        "        df = df.withColumnRenamed(\"lat\", \"latitude\").withColumnRenamed(\"lon\", \"longitude\")\n",
+        "        df = df.drop_duplicates()\n",
+        "        df = df.filter(df.current_status.isNotNull())\n",
+        "        df = df.filter(df.latitude.isNotNull() & df.longitude.isNotNull())  # Remove corrupted records (if any)\n",
+        "\n",
+        "        self.load(df=df, format=\"parquet\", path=\"/content/lake/silver/vehicles\", partition_column=\"date\")\n",
+        "\n",
+        "    def cleansing_lines(self):\n",
+        "        df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/bronze/lines\")\n",
+        "\n",
+        "        # Transformations\n",
+        "        df = df.drop_duplicates()\n",
+        "        df = df.filter(df.long_name.isNotNull())  # Remove rows where long_name is null\n",
+        "        df = df.filter(df.id.isNotNull())  # Remove corrupted records (if any)\n",
+        "\n",
+        "        self.load(df=df, format=\"parquet\", path=\"/content/lake/silver/lines\")\n",
+        "\n",
+        "    def cleansing_municipalities(self):\n",
+        "        df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/bronze/municipalities\")\n",
+        "\n",
+        "        # Transformations\n",
+        "        df = df.drop_duplicates()\n",
+        "        df = df.filter(df.name.isNotNull() & df.district_name.isNotNull())  # Remove rows with null name or district_name\n",
+        "        df = df.filter(df.id.isNotNull())  # Remove corrupted records (if any)\n",
+        "\n",
+        "        self.load(df=df, format=\"parquet\", path=\"/content/lake/silver/municipalities\")\n",
+        "\n",
+        "    def enrich(self):\n",
+        "      # Read data from the Silver layer\n",
+        "      vehicles_df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/silver/vehicles\")\n",
+        "      lines_df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/silver/lines\")\n",
+        "\n",
+        "      # Enrich vehicles with information from lines\n",
+        "      enriched_df = vehicles_df \\\n",
+        "          .join(lines_df, vehicles_df.line_id == lines_df.id, \"left\") \\\n",
+        "          .select(\n",
+        "              vehicles_df[\"*\"],\n",
+        "              lines_df[\"long_name\"].alias(\"line_name\")\n",
+        "          )\n",
+        "\n",
+        "      # Write the enriched data to the Gold layer\n",
+        "      self.load(df=enriched_df, format=\"parquet\", path=\"/content/lake/gold/vehicles_enriched\", partition_column=\"date\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    # Set up Gold layer directories\n",
+        "    os.makedirs(\"/content/lake/gold/vehicles_enriched\", exist_ok=True)\n",
+        "\n",
+        "    # init spark\n",
+        "    from pyspark.sql import SparkSession\n",
+        "    spark = SparkSession.builder.master('local').appName('ETL Program').getOrCreate()\n",
+        "\n",
+        "    print(\"Starting ETL program\")\n",
+        "    etl = ETLTask(spark)\n",
+        "\n",
+        "    # run tasks\n",
+        "    print(\"Running Task - Ingestion Vehicles\")\n",
+        "    etl.ingestion_vehicles()\n",
+        "\n",
+        "    print(\"Running Task - Ingestion Lines\")\n",
+        "    etl.ingestion_lines()\n",
+        "\n",
+        "    print(\"Running Task - Ingestion Municipalities\")\n",
+        "    etl.ingestion_municipalities()\n",
+        "\n",
+        "    print(\"Running Task - Cleansing Vehicles\")\n",
+        "    etl.cleansing_vehicles()\n",
+        "\n",
+        "    print(\"Running Task - Cleansing Lines\")\n",
+        "    etl.cleansing_lines()\n",
+        "\n",
+        "    print(\"Running Task - Cleansing Municipalities\")\n",
+        "    etl.cleansing_municipalities()\n",
         "\n",
         "    print(\"Running Task - Enrich Vehicles\")\n",
-        "    etl.enrich_vehicles()\n",
+        "    etl.enrich()\n",
         "\n",
-        "    print(\"ENRICH ETL process completed\")\n"
+        "    print(\"ETL program completed\")\n"
       ],
       "metadata": {
         "id": "iS_ZH9mfvfZo",
-        "outputId": "907af9c7-e277-414d-f386-8690ae6d1ca1",
+        "outputId": "f35df64c-5ef3-49f5-dac1-0df514b7514d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Starting ENRICH ETL process\n",
+            "Starting ETL program\n",
+            "Running Task - Ingestion Vehicles\n",
+            "Running Task - Ingestion Lines\n",
+            "Running Task - Ingestion Municipalities\n",
+            "Running Task - Cleansing Vehicles\n",
+            "Running Task - Cleansing Lines\n",
+            "Running Task - Cleansing Municipalities\n",
             "Running Task - Enrich Vehicles\n",
-            "ENRICH ETL process completed\n"
+            "ETL program completed\n"
           ]
         }
       ]
